--- a/aframe/examples/image-tracking/nft-video/index.html
+++ b/aframe/examples/image-tracking/nft-video/index.html
@@ -55,7 +55,7 @@
         embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
 
         <a-assets>
-            <video src="mov_bbb.mp4"
+            <video src="https://github.com/sooroosh10/ARTestSecond/blob/main/aframe/examples/image-tracking/nft-video/mov_bbb.mp4"
                 preload="auto" id="vid" response-type="arraybuffer" loop
                 crossorigin webkit-playsinline autoplay muted playsinline>
             </video>
@@ -63,7 +63,7 @@
 
         <a-nft
             videohandler
-            type='nft' url='../../data/dataNFT/pinball'
+            type='nft' url='https://github.com/sooroosh10/ARTestSecond/blob/main/aframe/examples/image-tracking/nft-video/pinball.jpg'
             smooth="true" smoothCount="10" smoothTolerance="0.01" smoothThreshold="5"
         >
             <a-video
