--- a/aframe/examples/location-based/always-face-user/index.html
+++ b/aframe/examples/location-based/always-face-user/index.html
@@ -16,6 +16,7 @@
 
         <a-camera gps-camera='simulateLatitude: 51.049; simulateLongitude: -0.723' rotation-reader></a-camera>
         <a-text value="This will always face the user." look-at="[gps-camera]" scale="75 75 75" gps-entity-place="latitude: 51.0491; longitude: -0.723;"></a-text>
+         <a-text value="11:11" look-at="[a-camera]" scale="100 100 100" gps-entity-place="latitude: 51.0491; longitude: -4.723;"></a-text>
     </a-scene>
 </body>
 
