--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="aframe/examples/image-tracking/nft/index.html">image-tracking nft</a> </li>
             <li><a href="aframe/examples/image-tracking/nft-video/index.html">image-tracking nft-video</a> </li>
+            <li><a href="aframe/examples/image-tracking/nft-video/NewVideo.html">image-tracking 2th-video</a> </li>
         </ul>
         <h2>location-based</h2>
         <ul>
