--- a/aframe/examples/image-tracking/nft-video/NewVideo.html
+++ b/aframe/examples/image-tracking/nft-video/NewVideo.html
@@ -48,11 +48,11 @@
       <a-assets>
         <video src="mov_bbb.mp4" id="vid" preload="auto" response-type="arraybuffer" crossorigin webkit-playsinline autoplay="false" playsinline></video>
       </a-assets>
-      <a-marker videohandler preset='custom' type='pattern' url='pinball.jpg' smooth="true" smoothCount="2" smoothTolerance="0.01" smoothThreshold="2">
+      <a-marker videohandler preset='custom' type='pattern' url='patern-pinbal.patt' smooth="true" smoothCount="2" smoothTolerance="0.01" smoothThreshold="2">
         <a-video src="#vid" position='6 -10 0' rotation='-90 0 0' width='10' height='17.5'></a-video>
         <!-- Add your own custom elements here -->
       </a-marker>
       <!-- Add your own custom elements here -->
       <a-entity camera></a-entity>
     </a-scene>
-  </body>
+</body>
