--- a/aframe/examples/image-tracking/nft-video/NewVideo.html
+++ b/aframe/examples/image-tracking/nft-video/NewVideo.html
@@ -9,7 +9,7 @@
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
       <!-- Add your marker here. Replace 'path/to/marker-image.png' with the actual path to your marker image. -->
       <a-marker preset="custom" type="pattern" url="pinball.jpg">
-        <!-- Add your video here. Replace 'path/to/video.mp4' with the actual path to your video file. -->path/to/marker-image.png
+        <!-- Add your video here. Replace 'path/to/video.mp4' with the actual path to your video file. -->
         <a-video
           src="mov_bbb.mp4"
           width="2.5"
