--- a/aframe/examples/image-tracking/nft-video/NewVideo.html
+++ b/aframe/examples/image-tracking/nft-video/NewVideo.html
@@ -8,9 +8,10 @@
   <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
       <!-- Add your marker here. Replace 'path/to/marker-image.png' with the actual path to your marker image. -->
-      <a-marker preset="custom" type="pattern" url="pinball.jpg">
+      <a-marker preset="custom" type="pattern" url="nft-video/pinball.jpg">
         <!-- Add your video here. Replace 'path/to/video.mp4' with the actual path to your video file. -->
         <a-video
+          id="video"
           src="mov_bbb.mp4"
           width="2.5"
           height="2"
@@ -21,5 +22,18 @@
       <!-- Display a fixed background or 3D environment here if needed -->
       <a-sky color="#000"></a-sky>
     </a-scene>
+
+    <script>
+      var marker = document.querySelector('a-marker');
+      var video = document.querySelector('#video');
+
+      marker.addEventListener('markerFound', function() {
+        video.play();
+      });
+
+      marker.addEventListener('markerLost', function() {
+        video.pause();
+      });
+    </script>
   </body>
 </html>
