--- a/aframe/examples/image-tracking/nft-video/NewVideo.html
+++ b/aframe/examples/image-tracking/nft-video/NewVideo.html
@@ -2,10 +2,9 @@
 <html>
   <head>
     <title>AR.js Video Example</title>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    
   </head>
   <body style="margin: 0; overflow: hidden;">
-    
+    <a>Hello</a>
   </body>
 </html>
