--- a/aframe/examples/image-tracking/nft-video/NewVideo.html
+++ b/aframe/examples/image-tracking/nft-video/NewVideo.html
@@ -10,7 +10,7 @@
     <a>Hello</a>
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
       <!-- Add your marker here. Replace 'path/to/marker-image.png' with the actual path to your marker image. -->
-      <a-marker preset="custom" type="pattern" url="nft-video/pinball.jpg">
+      <a-marker preset="custom" type="pattern" url="Land01.png">
         <!-- Add your video here. Replace 'path/to/video.mp4' with the actual path to your video file. -->
         <a-video
           id="video"
