--- a/aframe/examples/image-tracking/nft-video/NewVideo.html
+++ b/aframe/examples/image-tracking/nft-video/NewVideo.html
@@ -1,41 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AR.js Video Example</title>
+    <title>AR.js Image Marker Example</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-
   </head>
   <body style="margin: 0; overflow: hidden;">
-    <a>Hello</a>
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
       <!-- Add your marker here. Replace 'path/to/marker-image.png' with the actual path to your marker image. -->
-      <a-marker preset="custom" type="pattern" url="Land01.png">
-        <!-- Add your video here. Replace 'path/to/video.mp4' with the actual path to your video file. -->
-        <a-video
-          id="video"
-          src="mov_bbb.mp4"
-          width="2.5"
-          height="2"
-          rotation="-90 0 0"
-        ></a-video>
+      <a-marker preset="custom" type="pattern" url="path/to/marker-image.png">
+        <!-- Add your image here. Replace 'path/to/image.jpg' with the actual path to your image file. -->
+        <a-image src="path/to/image.jpg" width="2" height="2" position="0 0 0"></a-image>
       </a-marker>
 
       <!-- Display a fixed background or 3D environment here if needed -->
       <a-sky color="#000"></a-sky>
     </a-scene>
-
-    <script>
-      var marker = document.querySelector('a-marker');
-      var video = document.querySelector('#video');
-
-      marker.addEventListener('markerFound', function() {
-        video.play();
-      });
-
-      marker.addEventListener('markerLost', function() {
-        video.pause();
-      });
-    </script>
   </body>
 </html>
