--- a/aframe/examples/image-tracking/nft-video/NewVideo.html
+++ b/aframe/examples/image-tracking/nft-video/NewVideo.html
@@ -6,15 +6,7 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-      <!-- Add your marker here. Replace 'path/to/marker-image.png' with the actual path to your marker image. -->
-      <a-marker preset="custom" type="pattern" url="https://github.com/sooroosh10/ARTestSecond/blob/main/aframe/examples/image-tracking/nft-video/land01.png">
-        <!-- Add your image here. Replace 'path/to/image.jpg' with the actual path to your image file. -->
-        <a-image src="https://github.com/sooroosh10/ARTestSecond/blob/main/aframe/examples/image-tracking/nft-video/pinball.jpg" width="2" height="2" position="0 0 0"></a-image>
-      </a-marker>
-
-      <!-- Display a fixed background or 3D environment here if needed -->
-      <a-sky color="#000"></a-sky>
-    </a-scene>
+    <a>Hello sir!</a>
+    
   </body>
 </html>
