--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h2>Image-Tracking</h2>
         <ul>
             <li><a href="aframe/examples/image-tracking/nft/index.html">image-tracking nft</a> </li>
+            <li><a href="aframe/examples/image-tracking/nft/Image02.html">image-tracking nft2</a> </li>
             <li><a href="aframe/examples/image-tracking/nft-video/index.html">image-tracking nft-video</a> </li>
             <li><a href="aframe/examples/image-tracking/nft-video/NewVideo.html">image-tracking 2th-video</a> </li>
         </ul>
