--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="aframe/examples/image-tracking/nft/Image02.html">image-tracking nft2</a> </li>
             <li><a href="aframe/examples/image-tracking/nft-video/index.html">image-tracking nft-video</a> </li>
             <li><a href="aframe/examples/image-tracking/nft-video/NewVideo.html">image-tracking 2th-video</a> </li>
+            <li><a href="aframe/examples/image-tracking/MyModel.html">image-tracking 1th-Model</a> </li>
         </ul>
         <h2>location-based</h2>
         <ul>
