--- a/aframe/examples/image-tracking/MyModel.html
+++ b/aframe/examples/image-tracking/MyModel.html
@@ -8,10 +8,10 @@
 <a-scene embedded vr-mode-ui="enabled: false;" arjs="debugUIEnabled: false;">
 
     <a-assets>
-        <a-asset-item id="tree" src="models/tree.gltf"></a-asset-item>
+        <a-asset-item id="tree" src="aframe/examples/image-tracking/models/tree.gltf"></a-asset-item>
 	</a-assets>
     
-    <a-marker type="pattern" url="models/kanji.patt">
+    <a-marker type="pattern" url="aframe/examples/image-tracking/models/kanji.patt">
         <a-entity   position="0 0 0" 
                     rotation="0 0 0"
                     scale="0.10 0.10 0.10"
