--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             <li><a href="aframe/examples/marker-based/minimal_ES6.html">minimal_ES6</a> </li>
             <li><a href="aframe/examples/marker-based/multiple-independent-markers.html">multiple-independent-markers</a> </li>
             <li><a href="aframe/examples/marker-based/white-region-marker.html">white-region-marker</a> </li>
+
+             <li><a href="aframe/examples/My/index">Marcker base 2th-Model</a> </li>
         </ul>
         <h2>new-location-based</h2>
         <ul>
